# rustyfi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  STATUS.html  install.sh
.github/workflows/: ci.yml  release.yml
behavior/: README.md  check.py
bench/: README.md  RESULTS.md  aggregate.py  repos.toml  run.sh
bench/testdata/: alpha.json  beta.json  delta.json  gamma.json  repos.toml
corpus/: seed.jsonl
crates/rustyfi-cli/: Cargo.toml
crates/rustyfi-cli/src/: main.rs  progress.rs  unzip.rs
crates/rustyfi-core/: Cargo.toml
crates/rustyfi-core/src/: compiler.rs  context.rs  errors.rs  events.rs  lib.rs  state.rs  transitions.rs
crates/rustyfi-engine/: Cargo.toml
crates/rustyfi-engine/examples/: dep_scan.rs  doctor_crate.rs  flywheel_ab.rs  harvest_corpus.rs  lib_oracle.rs  passes_measure.rs  resolve.rs  retrieve_dryrun.rs
crates/rustyfi-engine/src/: agent_fix.rs  analysis.rs  auto_derive.rs  checkpoint.rs  chunker.rs  contract_check.rs  dedup_items.rs  deps.rs  fix_context.rs  graph.rs  lib.rs  llm.rs  pipeline.rs  resolve_imports.rs  rustfix.rs  scaffold.rs  slicer.rs
crates/rustyfi-engine/src/behavior/: diff.rs  harness.rs  lib_oracle.rs  mine.rs  mod.rs  recipe.rs
crates/rustyfi-engine/src/corpus/: harvest.rs  mod.rs  retrieve.rs  signal.rs  store.rs
crates/rustyfi-engine/tests/: claude_doctor_live.rs
crates/rustyfi-server/: Cargo.toml
crates/rustyfi-server/src/: main.rs
docs/: index.html
docs/superpowers/plans/: 2026-06-11-bench-suite.md  2026-06-12-phase2-contract-validation-fix-context.md  2026-06-12-phase3-doctor.md  2026-06-13-behavior-harness-library.md  2026-06-13-behavior-pipeline-cli-bench.md  2026-06-13-behavior-repair-doctor.md  2026-06-14-translation-flywheel.md
docs/superpowers/specs/: 2026-06-11-compile-clean-10x-design.html  2026-06-11-compile-clean-10x-design.md  2026-06-12-behavioral-equivalence-design.md  2026-06-14-translation-flywheel-design.md  2026-06-15-flywheel-ab-results.md  2026-06-15-library-behavioral-oracle.md  2026-06-15-library-oracle-prototype.py
examples/calculator/: README.md  behavior.yaml  main.go
examples/calculator/calc/: lexer.go  parser.go
web/: app.js  index.html  style.css
