[workspace]
members = ["crates/rustyfi-core", "crates/rustyfi-engine", "crates/rustyfi-server"]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "blocking"] }
axum        = { version = "0.7", features = ["multipart"] }
tower-http  = { version = "0.5", features = ["cors", "fs"] }
walkdir     = "2"
zip         = "2"
tempfile    = "3"
uuid        = { version = "1", features = ["v4"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex       = "1"
