[workspace]
members = ["crates/rustyfi-core", "crates/rustyfi-engine", "crates/rustyfi-server", "crates/rustyfi-cli"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/New1Direction/rustyfi"
authors = ["Rustyfi authors"]
rust-version = "1.87"
keywords = ["rust", "transpiler", "translation", "llm", "codegen"]
categories = ["development-tools", "command-line-utilities"]

[profile.release]
strip = true
lto = "thin"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["full"] }
# rustls instead of native-tls: pure-Rust TLS cross-compiles cleanly
# (openssl-sys broke the aarch64-linux release build).
reqwest     = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
axum        = { version = "0.7", features = ["multipart"] }
tower-http  = { version = "0.5", features = ["cors", "fs"] }
walkdir     = "2"
zip         = "2"
tempfile    = "3"
uuid        = { version = "1", features = ["v4"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex       = "1"
