[package]
name = "rustyfi-cli"
description = "Translate any codebase to Rust from the command line. cargo check is the oracle."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "rustyfi"
path = "src/main.rs"

[dependencies]
rustyfi-engine = { path = "../rustyfi-engine" }
clap       = { version = "4", features = ["derive"] }
indicatif  = "0.17"
console    = "0.15"
zip        = { workspace = true }
walkdir    = { workspace = true }
tempfile   = { workspace = true }
serde_json = { workspace = true }
serde_yaml   = "0.9"
