[package]
name = "rustyfi-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyfi-core = { path = "../rustyfi-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
reqwest      = { workspace = true }
walkdir      = { workspace = true }
regex        = { workspace = true }
uuid         = { workspace = true }
tempfile     = { workspace = true }
zip          = { workspace = true }
tracing      = { workspace = true }
