[package]
name = "rustyfi-engine"
description = "Rustyfi's translation pipeline: analysis, contract, translate, verify, package."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rustyfi-core = { path = "../rustyfi-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
reqwest      = { workspace = true }
walkdir      = { workspace = true }
regex        = { workspace = true }
uuid         = { workspace = true }
tempfile     = { workspace = true }
zip          = { workspace = true }
tracing      = { workspace = true }
rayon        = "1"
syn          = { version = "2", features = ["full", "parsing", "extra-traits"] }
proc-macro2  = { version = "1.0.80", features = ["span-locations"] }
quote        = "1"
