[package]
name = "rustyfi-server"
description = "Rustyfi's Axum web server and drag-and-drop UI backend."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "rustyfi-server"
path = "src/main.rs"

[dependencies]
rustyfi-core       = { path = "../rustyfi-core" }
rustyfi-engine     = { path = "../rustyfi-engine" }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
tempfile           = { workspace = true }
uuid               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
zip                = { workspace = true }
async-stream       = "0.3"
walkdir            = { workspace = true }
